--- a/index2.html
+++ b/index2.html
@@ -243,8 +243,9 @@
                 <div class="resume-frame-1">
                     <header>
                         <h2>Sachin Rajbhandari</h2>
-                        <h2>	sachink.rb@gmail.com</h2>
+                        <h2> <a href = "mailto:sachink.rb@gmail.com">sachink.rb@gmail.com</a></h2>
                         <h2>Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
+                        <h2>Austin, TX</h2>
                         
                     </header>
                     <div class="resume-frame-2">
@@ -281,14 +282,13 @@
                                 </hgroup>
                                 
                                 <ul>
-                                    <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Bootstrap Portfolio Website (sachinkrb.github.io)</a></li>                                   
-                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">RWD Website I</a></li>
-                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">RWD Website II</a></li>
+                                	<li><a href="https://github.com/sachinkrb/sachinkrb.github.io" target="_blank" style="color:black">Github</a></li>
+                                    <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Bootstrap Portfolio Website</a></li>                                   
+                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Basic RWD Website I</a></li>
+                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Basic RWD Website II</a></li>
                                      <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Skeleton Framework Website III</a></li>
                                     <li><a style=" color: black;" href="howtohtmlcss.pdf" download>How to CSS a Website</a></li>
-                                    <li><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black">Github Summary</a></li>                     
-                                    <li><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black">Codepen.io Playground</a></li>                                    
-                                    <li><a href="https://www.sololearn.com/Profile/3050404" target="_blank" style="color:black">Mini Courses</a></li>                               
+                                    <li><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black">Github Summary</a></li>                                                                                    
                                     <li><a href="https://snrphotos.myportfolio.com" target="_blank" style="color: black">Photography Portfolio</a></li>
                                     <li><a href="https://www.youtube.com/channel/UCoKB8EdCafdNP82Xy72mTMQ/videos?view_as=subscriber" target="_blank" style="color: black">YouTube</a></li>
 
@@ -316,7 +316,7 @@
                                 <ul>
                                     <li>Professionally handled software/hardware calls for all Apple products.</li>
                                     <li>Followed internal Apple documents to resolve software issues.</li>
-                                    <li>Documented eac software and hardware issues.</li>
+                                    <li>Documented each software and hardware issues.</li>
                                     <li>Setup hardware related repair appointments.</li>
                                     <li>Reported software updates bugs with steps to reproduce.</li>
                                 </ul>
@@ -329,9 +329,9 @@
                                 <ul>
                                     <li>Followed Agile methodology for tasks iterations, tasks reporting and final product demos.</li>
                                     <li>Worked on redesigning old website while waiting on a new project.</li>
-                                    <li>Worked with HTML5, CSS3, JavaScript, jQuery, JSP, Java, Spring, Maven, DB2, Subversion.</li>
-                                    <li>Used SQL queries to work with the DB2 database.</li>
+                                    <li>Worked with HTML5, CSS3,SQL, JavaScript, jQuery, JSP, Java, Spring, Maven, DB2, Subversion.</li>
                                     <li>Took care of defects opened by QA within the given time frame. </li>
+                                    <li>Project ended prematurely for lack of budget.</li>
                                 </ul>
                             </article>
                             <article>
