--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
                     <p></p>
                     <p>Learning Full Stack Courses.</p>                 
                     <p>Interested in Machine Learning Tasks.</p>
-                    <p>Emphasis on Python based tasks.</p>
+                    <p>Inclined towards Python.</p>
                     <hr>
                     <!-- My Skills -->
                     <span class="fa-stack">
@@ -110,13 +110,13 @@ body {
             <div class="col-sm-8">
                 <div class="well">
                     <h3><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Mini Projects</h3>
+                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io" target="_blank" style="color:black"> Github</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> RWD Website I</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> RWD Website II</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Skeleton Framework Website III</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Resume in HTML/CSS Format</a><br>
                     <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS a Website</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Github Summary</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> Codepen.io Account</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://www.youtube.com/channel/UCoKB8EdCafdNP82Xy72mTMQ/videos?view_as=subscriber" target="_blank" style="color:black"> YouTube</a>
                     <h3><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h3>
