--- a/index2.html
+++ b/index2.html
@@ -142,9 +142,9 @@
     .resume-frame-1 .resume-frame-2 .resume-frame-3 ul {
         display: -ms-grid;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        padding: 5px;
-        margin: 15px 16px 15px;
+        grid-template-columns: repeat(auto-fit, minmax(500px, 500px));
+        padding: 10px;
+        margin: 10px 10px 10px;
         list-style-position: inside;
         text-align: left;
         font-size: 1em;
