--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body {
                     <hr>
                     <h5><b>United Health Group - Web Developer - Short-Term IT Contract Job</b></h5>
                     <h6><i class="fa fa-calendar "></i> <span> Feb 2017 - May 2017</span></h6>
-                    <p>Collaborated on redesigning an old website. Recoded assigned tasks for pages. Successfully closed QA bug tickets .</p>
+                    <p>Collaborated on redesigning an old website. Recoded assigned tasks for pages. Successfully closed QA bug tickets. Project ended prematurely for the reallocation of the budget.</p>
                     <hr>
                     <h5><b>Support.com - Remote Services Technician - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i> Dec 2015 - Jan 2017</h6>
@@ -166,7 +166,7 @@ body {
                     <i class="fa fa-linkedin fa-stack-1x" style="color: #5ABA5A"></i>
                 </span></a>
             <p></p>
-            <p>" Understanding a programming concept is like getting done with learning to ride a bicycle. It gets easier the second time." - Sachin Rajbhandari :)</p>
+            <p>" Understanding a programming concept is like learning to ride a bicycle. It gets easier the second time." - Sachin Rajbhandari :)</p>
         </footer>
     </div>
 </body>
