--- a/index2.html
+++ b/index2.html
@@ -227,7 +227,7 @@
     <div style="outline:none" tabindex="-1" role="group">
         <!-- <div id="page"> -->
         <!-- <main id="container"> -->
-        <div id="myNav" class="overlay">
+        <!-- <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <a href="">RESUME</a>
@@ -239,7 +239,7 @@
                 <a href="https://github.com/sachinkrb">MY GITHUB</a>
             </div>
         </div>
-        <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU - CLICK HERE</span>
+        <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU - CLICK HERE</span> -->
         <div class="resume-frame-1">
             <header>
                 <h2>Sachin Rajbhandari</h2>
@@ -321,7 +321,7 @@
                             <li>Worked on redesigning old website while waiting on a new project.</li>
                             <li>Worked with HTML5, CSS3,SQL, JavaScript, jQuery, JSP, Java, Spring, Maven, DB2, Subversion.</li>
                             <li>Took care of defects opened by QA within the given time frame. </li>
-                            <li>Project ended prematurely for lack of budget.</li>
+                            <li>The project ended prematurely for the reallocation of the budget.</li>
                         </ul>
                     </article>
                     <article>
@@ -359,22 +359,6 @@
                         <ul>
                             <li>Associate Degree in Computer Science</li>
                         </ul>
-                        <hgroup>
-                            <h1>Minnesota State University (MNSU) - Mankato, MN</h1>
-                            <p>2005 - 2009</p>
-                        </hgroup>
-                        <ul>
-                            <li>Information Technology (NOT A GRAD)</li>
-                        </ul>
-                        <article>
-                            <hgroup>
-                                <h1>Orchid Science College - Bharatpur, NEPAL</h1>
-                                <p>2002 - 2004</p>
-                            </hgroup>
-                            <ul>
-                                <li>High School Diploma</li>
-                            </ul>
-                        </article>
                         <hgroup>
                             <h1>References</h1>
                         </hgroup>
