--- a/index2.html
+++ b/index2.html
@@ -142,7 +142,7 @@
     .resume-frame-1 .resume-frame-2 .resume-frame-3 ul {
         display: -ms-grid;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(500px, 500px));
+        grid-template-columns: repeat(auto-fit, minmax(500px, 600px));
         padding: 10px;
         margin: 10px 10px 10px;
         list-style-position: inside;
@@ -227,7 +227,7 @@
     <div style="outline:none" tabindex="-1" role="group">
         <!-- <div id="page"> -->
         <!-- <main id="container"> -->
-        <!-- <div id="myNav" class="overlay">
+        <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <a href="">RESUME</a>
@@ -239,7 +239,7 @@
                 <a href="https://github.com/sachinkrb">MY GITHUB</a>
             </div>
         </div>
-        <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU - CLICK HERE</span> -->
+        <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU - CLICK HERE</span>
         <div class="resume-frame-1">
             <header>
                 <h2>Sachin Rajbhandari</h2>
