update to github repo link

--- a/index2.html
+++ b/index2.html
@@ -273,7 +273,7 @@
                             <h2>Mini Projects</h2>
                         </hgroup>
                         <ul>
-                            <li><a href="https://github.com/sachinkrb/sachinkrb.github.io" target="_blank" style="color:black">Github</a></li>
+                            <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github</a></li>
                             <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Bootstrap Portfolio Website</a></li>
                             <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Basic RWD Website I</a></li>
                             <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Basic RWD Website II</a></li>
