--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {
             <div class="col-sm-8">
                 <div class="well">
                     <h3><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Mini Projects</h3>
-                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io" target="_blank" style="color:black"> Github</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> RWD Website I</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> RWD Website II</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Skeleton Framework Website III</a><br>
