--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ body {
                     </span>
                     <b>Current Status</b>
                     <p></p>
-                    <p>Learning Full Stack Courses.</p>
-                    <p>Interested in Machine Learning Tasks.</p>
-                    <p>Inclined towards Python.</p>
+                    <p> Attending College.</p>
+                    <p> Attending Nucamp Bootcamp.</p>
+                    <p> Inclined for Python.</p>
                     <hr>
                     <!-- My Skills -->
                     <span class="fa-stack">
@@ -77,23 +77,17 @@ body {
                     </span>
                     <b>Knowledge About</b>
                     <p></p>
-                    <p>HTML5/CSS3/Bootstrap</p>
-                    <p>JavaScript/jQuery/JSON/Node.js</p>
-                    <p>Java/Spring/JSP/Maven</p>
-                    <p>PostgreSQL/MySQL</p>
-                    <p>Python/Django</p>
-                    <p>WordPress</p>
-                    <p>Lightroom/Photoshop</p>
-                    <hr>
+                    <p>HTML5 | CSS3 | Bootstrap</p>
+                    <p>JavaScript | JSON | NodeJS</p>
+                    <p>Java | Spring | JSP |Maven</p>
+                    <p>PostgreSQL | MySQL</p>
+                    <p>Python | Django</p>
+                    <p>Git | Docker | AWS | WordPress</p>
+                    <p>Lightroom | Photoshop</p>
+                    <p>Linux | CCNA</p>
+                   
                     <!-- Languages -->
-                    <span class="fa-stack">
-                        <i class="fa fa-circle-thin fa-stack-2x"></i>
-                        <i class="fa fa-language fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
-                    </span>
-                    <b>Languages</b>
-                    <p></p>
-                    <p>English, Nepali, Hindi.</p>
-                    <br>
+  
                 </div>
                 <!-- End Left Column -->
             </div>
@@ -102,14 +96,14 @@ body {
                 <div class="well">
                     <h3><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Mini Projects</h3>
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> RWD Website I</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> RWD Website II</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Skeleton Framework Website III</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> Static Website I</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> Static Website II</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Online Links </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Site Backup </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Resume in HTML/CSS Format</a><br>
                     <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS a Website</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Github Summary</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://www.youtube.com/channel/UCoKB8EdCafdNP82Xy72mTMQ/videos?view_as=subscriber" target="_blank" style="color:black"> YouTube</a>
                     <h3><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h3>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> July 2019 - Current</span></h6>
@@ -134,6 +128,7 @@ body {
                     <h5><b>University of the People, Pasadena, CA</b></h5>
                     <h6><i class="fa fa-calendar"></i> 2020 - Current</h6>
                     <p>Associate in Computer Science</p>
+                    <br>
                 </div>
             </div>
         </div>
@@ -166,7 +161,7 @@ body {
                     <i class="fa fa-linkedin fa-stack-1x" style="color: #5ABA5A"></i>
                 </span></a>
             <p></p>
-            <p>" Understanding a programming concept is like learning to ride a bicycle. It gets easier the second time." - Sachin Rajbhandari :)</p>
+            <p>" Understanding a programming concept is like learning to ride a bicycle. It gets easier the second time."</p>
         </footer>
     </div>
 </body>
