--- a/index2.html
+++ b/index2.html
@@ -254,15 +254,14 @@
                         <h2>Good knowledge of</h2>
                         <hr>
                         <ul>
-                            <li>HTML/CSS/Bootstrap</li>
-                            <li>JS/jQuery/JSON/Node.js</li>
-                            <li>Java/JSP/Spring/Maven</li>
-                            <li>MySQL/PostgreSQL</li>
-                            <li>Python/Django</li>
-                            <li>WordPress</li>
-                            <li>Git/GitHub</li>
-                            <li>Lightroom/Photoshop</li>
-                            <li>Linux/CCNA commands</li>
+                            <li>HTML | CSS | Bootstrap</li>
+                            <li>JS | JSON | NodeJS</li>
+                            <li>Java | JSP | Spring | Maven</li>
+                            <li>MySQL | PostgreSQL</li>
+                            <li>Python | Django</li>
+                            <li>Git | Docker | AWS | WordPress</li>
+                            <li>Lightroom | Photoshop</li>
+                            <li>Linux | CCNA commands</li>
                         </ul>
                     </div>
                 </section>
@@ -275,13 +274,13 @@
                         <ul>
                             <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github</a></li>
                             <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Bootstrap Portfolio Website</a></li>
-                            <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Basic RWD Website I</a></li>
-                            <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Basic RWD Website II</a></li>
-                            <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Skeleton Framework Website III</a></li>
+                            <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Static Website I</a></li>
+                            <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Static Website II</a></li>
+                            <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Online Links</a></li>
+                            <li><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" style="color:black">WordPress Defunct Site Backup</a></li>
                             <li><a style=" color: black;" href="howtohtmlcss.pdf" download>How to CSS a Website</a></li>
                             <li><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black">Github Summary</a></li>
                             <li><a href="https://snrphotos.myportfolio.com" target="_blank" style="color: black">Photography Portfolio</a></li>
-                            <li><a href="https://www.youtube.com/channel/UCoKB8EdCafdNP82Xy72mTMQ/videos?view_as=subscriber" target="_blank" style="color: black">YouTube</a></li>
                         </ul>
                     </article>
                 </section>
@@ -363,8 +362,8 @@
                             <h1>References</h1>
                         </hgroup>
                         <ul>
-                            <li>Chhabi Pachabhaiya-----------Drupal Engineer@Apple----------------------------chhabi@pachabhaiya.com---------469-386-7729</li>
-                            <li>Dilip Paudel-----------------------Software Engineer@SAP----------------------------dilip.paudel@sap.com---------------985-413-7771</li>
+                            <li>Chhabi Pachabhaiya----------- Senior Drupal Dev@Apple----------------------------chhabi@pachabhaiya.com---------469-386-7729</li>
+                            <li>Dilip Paudel------------------------Java Dev@CHASE-----------------------------------------dilip.paudel@sap.com---------------985-413-7771</li>
                         </ul>
                     </article>
                 </section>
