--- a/index.html
+++ b/index.html
@@ -47,46 +47,51 @@ body {
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
                         <i class="fa fa-briefcase fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
-                    Web Developer - Austin, TX<br>
+                    Web Developer - TX<br>
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
                         <i class="fa fa-envelope fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
-                    <a href="mailto:sachink.rb@gmail.com">sachink.rb@gmail.com</a><br>
+                    <a href="mailto:sachink.rb@gmail.com">devsachinr@gmail.com</a><br>
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
                         <i class="fa fa-phone fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
                     <a href="tel:9033578963">903-357-8963</a><br>
                     <hr>
-                    <!-- Currently Focused On -->
-                    <span class="fa-stack">
-                        <i class="fa fa-circle-thin fa-stack-2x"></i>
-                        <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
-                    </span>
-                    <b>Current Status</b>
-                    <p></p>
-                    <p> Attending College.</p>
-                    <p> Attending Nucamp Bootcamp.</p>
-                    <p> Inclined for Python.</p>
-                    <hr>
                     <!-- My Skills -->
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
                         <i class="fa fa-cog fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
-                    <b>Knowledge About</b>
+                    <b>Main Skills</b>
                     <p></p>
                     <p>HTML5 | CSS3 | Bootstrap</p>
-                    <p>JavaScript | JSON | NodeJS</p>
+                    <p>JavaScript | NodeJS | Express</p>
+                    <p>React | React Native
+                    <p>MongoDB| Git | Deployment</p>
+                    <hr>
+                    <span class="fa-stack">
+                        <i class="fa fa-circle-thin fa-stack-2x"></i>
+                        <i class="fa fa-cog fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
+                    </span>
+                    <b>Other Skills</b>
+                    <p>Python | Django | PostgreSQL</p>
                     <p>Java | Spring | JSP |Maven</p>
-                    <p>PostgreSQL | MySQL</p>
-                    <p>Python | Django</p>
-                    <p>Git | Docker | AWS | WordPress</p>
+                    <p>Docker | AWS | WordPress</p>                    
                     <p>Lightroom | Photoshop</p>
                     <p>Linux | CCNA</p>
                    
                     <!-- Languages -->
+
+                    <h3><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h3>
+                    <h5><b>Nucamp Bootcamp</b></h5>
+                    <h6><i class="fa fa-calendar"></i> 2021 </h6>
+                    <p>FullStack Web & Mobile Development Certificate</p>
+                    <h5><b>University of the People, Pasadena, CA</b></h5>
+                    <h6><i class="fa fa-calendar"></i> 2020 - Current</h6>
+                    <p>Associate in Computer Science</p>
+                    <br>
   
                 </div>
                 <!-- End Left Column -->
@@ -95,15 +100,32 @@ body {
             <div class="col-sm-8">
                 <div class="well">
                     <h3><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Mini Projects</h3>
+                    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates" target="_blank" style="color:black"> FullStack Certificates </a><br> 
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> Static Website I</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> Static Website II</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Online Links </a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Site Backup </a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Resume in HTML/CSS Format</a><br>
-                    <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS a Website</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Github Summary</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 1 - Nucampsite</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 2 - Nucampsite</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://infallible-sammet-9a5b01.netlify.app/" target="_blank" style="color:black"> React - Nucampsite </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Website I</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Website II</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black">HTML/CSS Resume</a><br>
+                    <!-- <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Online Links </a><br> -->
+                    <i class="fa fa-check-circle-o"></i><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats Site Backup </a><br>
+                    <!-- <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS a Website</a><br> -->
                     <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio</a><br>
+                    <hr>
+                    <!-- Currently Focused On -->
+                    <span class="fa-stack">
+                        <i class="fa fa-circle-thin fa-stack-2x"></i>
+                        <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
+                    </span>
+
+                    <b>Current Status</b>
+                    <p></p>
+                    <p> Attending College.</p>
+                    <p> Completed Nucamp Bootcamp.</p>
+                    <p> MERN Stack </p>
+                    <hr>
                     <h3><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h3>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> July 2019 - Current</span></h6>
@@ -124,18 +146,14 @@ body {
                     <h5><b>Academic Computer Center - MNSU IT Support</b></h5>
                     <h6><i class="fa fa-calendar "></i> Nov 2007 - May 2009</h6>
                     <p>Assisted in deployment, configuration, troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students on working with various Microsoft products. </p>
-                    <h3><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h3>
-                    <h5><b>University of the People, Pasadena, CA</b></h5>
-                    <h6><i class="fa fa-calendar"></i> 2020 - Current</h6>
-                    <p>Associate in Computer Science</p>
-                    <br>
+                    
                 </div>
             </div>
         </div>
     </div>
     <div class="container">
         <footer class="well text-center">
-            <p><i class="fa fa-thumbs-o-up"></i> Find me on social media <i class="fa fa-thumbs-o-down"></i></p>
+            <p><i class="fa fa-thumbs-o-up"></i> Decorative Blank Media ;) <i class="fa fa-thumbs-o-down"></i></p>
             <a href="https://www.facebook.com" target="_blank"><span class="fa-stack fa-lg">
                     <i class="fa fa-circle-thin fa-stack-2x"></i>
                     <i class="fa fa-facebook-official fa-stack-1x" style="color: #5ABA5A"></i>
