--- a/certificates.html
+++ b/certificates.html
@@ -11,11 +11,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+<style>
+html,
+body {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+
+}
+
+body {
+    margin-top: 3%;
+    margin-left: 3%;
+    margin-bottom: 2%;
+    background-image: url("linen.png");
+
+}
+</style>
+
 <body>
-<i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Full Stack Web and Mobile Development Bootcamp.pdf" style="color:black"> Full Stack Web and Mobile Development Bootcamp</a><br>
-<i class="fa fa-check-circle-o"></i><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 2 - Nucampsite</a><br>
-<i class="fa fa-check-circle-o"></i><a href="https://infallible-sammet-9a5b01.netlify.app/" target="_blank" style="color:black"> React - Nucampsite </a><br>
-<i class="fa fa-check-circle-o"></i><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography</a><br>
-<i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Website I</a><br>
-<i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Website II</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Full Stack Web and Mobile Development Bootcamp.pdf" style="color:black"> Full Stack Web and Mobile Development Bootcamp</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Back-End Development NodeJS, Express, MongoDB.pdf" style="color:black"> Back-End Development: NodeJS, Express, MongoDB</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web and Mobile Development Bootcamp.pdf" style="color:black"> Front-End Web and Mobile Development Bootcamp</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web Development React Native.pdf" style="color:black"> Front-End Web Development: React Native</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web Develpment React.pdf" style="color:black"> Front-End Web Develpment: React</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web Development Bootstrap.pdf" style="color:black"> Front-End Web Development: Bootstrap</a><br>
 </body>
