--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ body {
     </div>
     <div class="container">
         <footer class="well text-center">
-            <p><i class="fa fa-thumbs-o-up"></i> Decorative Blank Media ;) <i class="fa fa-thumbs-o-down"></i></p>
+            <p><i class="fa fa-thumbs-o-up"></i> Decorative Blank Social Media ;) <i class="fa fa-thumbs-o-down"></i></p>
             <a href="https://www.facebook.com" target="_blank"><span class="fa-stack fa-lg">
                     <i class="fa fa-circle-thin fa-stack-2x"></i>
                     <i class="fa fa-facebook-official fa-stack-1x" style="color: #5ABA5A"></i>
