--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ body {
                 <div class="well">
                     <img src="test.jpg" class="img-responsive img-rounded" alt="Avatar">
                     <p>
-                        <center><a href="index2.html" class="btn btn-success btn-block" role="button">View Web Resume</a></center>
+                        <center><a href="#" class="btn btn-success btn-block" role="button">View Web Resume</a></center>
                     </p>
                     <p>
-                        <center><a href="SachinsResume.pdf" class="btn btn-success btn-block" role="button">Download PDF Resume</a></center>
+                        <center><a href="#" class="btn btn-success btn-block" role="button">Download PDF Resume</a></center>
                     </p>
                     <h3>Sachin Rajbhandari</h3>
                     <span class="fa-stack">
@@ -99,7 +99,7 @@ body {
             <div class="col-sm-8">
                 <div class="well">
                     <h3><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Mini Projects</h3>
-                    <i class="fa fa-check-circle-o"></i><a href="certificates.html" target="_blank" style="color:black"> FullStack Certificates</a><br> 
+                    <i class="fa fa-check-circle-o"></i><a href="certificates.html" target="_blank" style="color:black"> Full Stack Certificates</a><br> 
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 1 - Nucampsite</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 2 - Nucampsite</a><br>
@@ -107,7 +107,7 @@ body {
                     <i class="fa fa-check-circle-o"></i><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Website I</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Website II</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black">HTML/CSS Resume</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="#" target="_blank" style="color:black">HTML/CSS Resume</a><br>
                     <!-- <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Online Links </a><br> -->
                     <i class="fa fa-check-circle-o"></i><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats Site Backup </a><br>
                     <!-- <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS a Website</a><br> -->
