--- a/certificates.html
+++ b/certificates.html
@@ -26,13 +26,16 @@ body {
     background-image: url("linen.png");
 
 }
+a {
+    color: black;
+}
 </style>
 
 <body>
-    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Full Stack Web and Mobile Development Bootcamp.pdf" style="color:black"> Full Stack Web and Mobile Development Bootcamp</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Back-End Development NodeJS, Express, MongoDB.pdf" style="color:black"> Back-End Development: NodeJS, Express, MongoDB</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web and Mobile Development Bootcamp.pdf" style="color:black"> Front-End Web and Mobile Development Bootcamp</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web Development React Native.pdf" style="color:black"> Front-End Web Development: React Native</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web Develpment React.pdf" style="color:black"> Front-End Web Develpment: React</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web Development Bootstrap.pdf" style="color:black"> Front-End Web Development: Bootstrap</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Full Stack Web and Mobile Development Bootcamp.pdf" target="_blank"> Full Stack Web and Mobile Development Bootcamp</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Back-End Development NodeJS, Express, MongoDB.pdf" target="_blank"> Back-End Development: NodeJS, Express, MongoDB</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web and Mobile Development Bootcamp.pdf" target="_blank"> Front-End Web and Mobile Development Bootcamp</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web Development React Native.pdf" target="_blank"> Front-End Web Development: React Native</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web Develpment React.pdf" target="_blank"> Front-End Web Develpment: React</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="./All Nucamp Certificates/Front-End Web Development Bootstrap.pdf" target="_blank"> Front-End Web Development: Bootstrap</a><br>
 </body>
