--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
                     </span>
                     <b>Main Skills</b>
                     <p></p>
-                    <p>HTML5 | CSS3 | Bootstrap</p>
+                    <p>HTML | CSS | Bootstrap</p>
                     <p>JavaScript | NodeJS | Express</p>
                     <p>React | React Native
                     <p>MongoDB| Git | Deployment</p>
