--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body {
                     </span>
                     <b>Other Skills</b>
                     <p>Python | Django | PostgreSQL</p>
-                    <p>Java | Spring | JSP |Maven</p>
+                    <p>Java | Spring | JSP | Maven</p>
                     <p>Docker | AWS | WordPress</p>                    
                     <p>Lightroom | Photoshop</p>
                     <p>Linux | CCNA</p>
@@ -121,9 +121,9 @@ body {
 
                     <b>Current Status</b>
                     <p></p>
-                    <p> Attending College.</p>
-                    <p> Completed Nucamp Bootcamp.</p>
-                    <p> MERN Stack </p>
+                    <p> Attending University.</p>
+                    <p> Completed Nucamp Bootcamp - MERN Stack</p>
+                    <p> Actively looking for Web Developer positions </p>
                     <hr>
                     <h3><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h3>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
