--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ body {
                     <b>Current Status</b>
                     <p></p>
                     <p> Attending University.</p>
-                    <p> Completed Nucamp Bootcamp - MERN Stack</p>
-                    <p> Actively looking for Web Developer positions </p>
+                    <p> Completed Nucamp Bootcamp - MERN Stack.</p>
+                    <p> Actively looking for Web Developer positions.</p>
                     <hr>
                     <h3><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h3>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
